--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Insider </title>
+  <title> Migle's website </title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
 
 <h2>Welcome to my site!</h2>
 
-<img src="duck.jpg" alt"Fashion" width="200px">
+<img src="duck.jpg" alt"A picture of a duck" width="200px">
 </div>
 
 <div>
