--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Migle's website </title>
+  <title> Insider - fashion magazine </title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
 </head>
 
 <body>
 <div>
-<h1>Hello World</h1>
+<h1>Insider</h1>
 
 <h2>Welcome to my site!</h2>
 
