--- a/index.html
+++ b/index.html
@@ -9,16 +9,10 @@
 <body>
 <div>
 <h1>Insider</h1>
-
-<h2>Welcome to my site!</h2>
-
-<img src="duck.jpg" alt"A picture of a duck" width="200px">
 </div>
 
 <div>
-<p>I am currently learning to code with <a href="https://www.codefirstgirls.org.uk/#"> Code First Girls</a>. Going over everything from how the
-internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
-Everyone should learn to code, here are some pretty good reasons why...</p>
+<p>I don't know.</p>
 
 <ol>
   <li>HTML is cool</li>
