--- a/index.html
+++ b/index.html
@@ -14,28 +14,15 @@
 <div>
 <p>I don't know.</p>
 
-<ol>
-  <li>HTML is cool</li>
-  <li id="lower">CSS is cooler</li>
-  <li id="lowest">JS is the best</li>
-</ol>
 </div>
 
+<div>
 <h2>
-  <em>What do you need to create a website?</em>
+  <em>BEST OF THE BEST</em>
   </h2>
 
-<p>Not much!</p>
-
-<ul>
-  <li id="abc"> A computer</li>
-  <li id="b"> A text editor</li>
-  <li id="c"> A web browser</li>
-  <li id="d"> Some HTML, CSS and JS files</li>
-</ul>
 </div>
 
 
-<p>Follow my progress on <a href="https://github.com/migle95"> github</a></p>
 </body>
 </html>
