--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet"
+         href="https://fonts.googleapis.com/css?family=Permanent+Marker">
+         <style>
+         body {
+        font-family: 'Tangerine', serif;
+        font-size: 48px;
+      }
+      </style>
   <title> Insider - fashion magazine </title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
 <body>
-<div>
-<h1>Insider</h1>
+<div class="header">
+<h1>INSIDER</h1>
 </div>
 
-<div>
+<div class="">
 <p>I don't know.</p>
-
 </div>
 
-<div>
+<div class="botb">
 <h2>
   <em>BEST OF THE BEST</em>
   </h2>
-
 </div>
 
 
